tests/error/type_errors/invert_not_int.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo() -> int:
6:        return ~True
                  ^^^^
GuppyTypeError: Expected expression of type `int`, but got `True` of type `bool`
